# pg-docs

./: alembic.ini  docker-compose.yml  dockerfile  makefile  pyproject.toml  setup.cfg
docs/: openapi.json  openapi.yaml
docs/cli/: cli.md
docs/http/: http.md
docs/pydantic/: pydantic.md
docs/sql/: sql.md
src/: app.py  config.py  contorllers.py  domain.py  main.py  run.py
src/billy_shop/: contorllers.py  domain.py
src/framework/: container.py  router.py
src/framework/browser/: domain.py
src/framework/browser/application/: browser.py  exceptions.py  ports.py  request_builder.py
src/framework/browser/infrastructure/: connections.py  factory.py  socket.py
src/framework/helpers/: get_annotations.py  get_non_magic_methods.py  get_sliced_dict.py
src/framework/routes/: validator.py
src/framework/routes/application/: dto.py  ports.py  routes.py
src/framework/server/: domain.py  ports.py  server.py  socket.py
src/framework/web/application/: ports.py
src/framework/web/application/browser/: README.md  browser.py  connection_runner.py
src/framework/web/domain/: entities.py  factories.py
src/framework/web/infrastructure/: connections.py  factories.py  socket.py
src/migrations/: env.py
src/migrations/versions/: d683e74f8e77_database_creation.py
src/project/: models.py
tests/: conftest.py  test_domain.py
tests/framework/: conftest.py  test_helpers.py  test_routes.py  test_validator.py
tests/framework/browser/: conftest.py  test_browser.py
tests/framework/server/: conftest.py  test_browser.py  test_request.py
(+3 files in other folders)
