[tool.poetry]
name = "postgresql"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
psycopg2-binary = "^2.9.9"
black = "^23.12.1"
coverage = "^7.4.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
