[tool.poetry]
name = "postgresql"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
psycopg2-binary = "^2.9.9"
black = "^23.12.1"
coverage = "^7.4.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
selenium = "^4.16.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
